--- a/main/src/scss/opintoni/_variables.scss
+++ b/main/src/scss/opintoni/_variables.scss
@@ -20,8 +20,9 @@ $page-content-max-width: 1280px !default;
 
 // Adjusting this variable automatically alters the height of the banner image
 // and carousel.
-$page-banner-height: 620px !default;
-$page-banner-height-mobile: 300px !default;
+$page-banner-height: 420px !default;
+$page-banner-height-mobile: 670px !default;
+$page-banner-image-height-mobile: 320px !default;
 
 $real-black: #000000;
 
